1.12

- Explicitly turn off negative epoch testing on VMS.  Change #24310
from bleadperl, Craig Berry.


1.11    2005-02-09

- Try to make detection of supported epoch range a little smarter.
The detection was allowing negative epochs on Win32 but apparently
this doesn't work, and trying to pass a pre-epoch date in just causes
a lot of warnings.  This silences warnings during the tests on
windows.


1.10    2004-04-20

- Fix compilation failure with older Test.pm (including the versions
shipped with 5.6.1 and earlier perls).  Ticket #6079 on rt.cpan.org.
Patch by somebody who didn't give their name on rt.cpan.org ;)


1.09    2004-04-07

- Fixed a bug in the test suite that led to timegm not getting tested
properly, and timelocal getting tested twice for the same values.


1.08    2004-04-07

- Changed occurences of "UTC" to "GMT" in order to agree with POSIX,
which defines the epoch in terms of GMT.

- Documented the behavior of timelocal() when given a local time that
does not exist (due to a DST change).  Suggested by Nick Ing-Simmons.

- Don't expect edge case tests to pass on AIX 4.3, since the OS is
obselete.  Patch from core passed on my H. Merijn Brand.


1.07_94  2003-12-11

- More changes from Henrik Gulbrandsen to make sure that very large
negative epoch values are handled properly on platforms that can
handle negative epoch values at all.

- Make sure that we really do always return the earliest of two local
times when DST makes conversion from GMT to local time ambiguous.
Again by Henrik.

- Fix a bug that could have occurred if the maximum or minimum integer
size on a platform was divisible by 86,400.  Also by Henrik.


1.07_93  2003-07-23

- Henrik's code explicitly didn't work with negative epoch values,
which is not good.  Now we assume that they are allowed, except on
MacOS, which is known to use an unsigned int for time_t.

- Document that dates before the epoch should work on systems which